@@ -1,5 +1,5 @@
 # This file is updated automatically by Makefile.
 glibc-branch := fedora
 glibc-base := HEAD
-fedora-sync-date := 2004-10-01 11:34 UTC
-fedora-sync-tag := fedora-glibc-20041001T1134
+fedora-sync-date := 2004-10-01 21:34 UTC
+fedora-sync-tag := fedora-glibc-20041001T2134
